Update 프로그래머스_기둥과 보 설치.ipynb

--- a/프로그래머스_기둥과 보 설치.ipynb
+++ b/프로그래머스_기둥과 보 설치.ipynb
@@ -29,7 +29,7 @@
     "    for frame in build_frame:\n",
     "        x, y, stuff, operate = frame\n",
     "        \n",
-    "        if operate == 0: # 삭헤 하는 경우\n",
+    "        if operate == 0: # 삭 하는 경우\n",
     "            answer.remove([x, y, stuff])\n",
     "            if not possible(answer):\n",
     "                answer.append([x, y, stuff])\n",
