--- a/백준_감시.ipynb
+++ b/백준_감시.ipynb
@@ -32,84 +32,255 @@
    "source": [
     "import copy\n",
     "\n",
-    "dx = [1, -1 ,0, 0] # 아래 위 오른쪽 왼쪽 \n",
-    "dy = [0, 0, 1, -1]\n",
+    "INF = int(1e9)\n",
     "\n",
-    "n, m = map(int, input().split())\n",
     "\n",
-    "cctv = [[] for _ in range(6)]\n",
+    "def dfs(idx):\n",
+    "    global min_area, arr\n",
+    "    if idx == len(position):\n",
+    "        temp = 0\n",
+    "        for i in range(N):\n",
+    "            for j in range(M):\n",
+    "                if arr[i][j] == 0:\n",
+    "                    temp += 1\n",
+    "        min_area = min(min_area, temp)\n",
+    "    else:\n",
+    "        value, row, col = position[idx]\n",
+    "        temp = copy.deepcopy(arr)\n",
+    "        if value == 1:\n",
+    "            # 상\n",
+    "            for i in range(row - 1, -1, -1):\n",
+    "                if arr[i][col] == 0:\n",
+    "                    arr[i][col] = '#'\n",
+    "                elif arr[i][col] == 6:\n",
+    "                    break\n",
+    "            dfs(idx + 1)\n",
     "\n",
-    "graph = []\n",
+    "            # 하\n",
+    "            arr = copy.deepcopy(temp)\n",
+    "            for i in range(row + 1, N):\n",
+    "                if arr[i][col] == 0:\n",
+    "                    arr[i][col] = '#'\n",
+    "                elif arr[i][col] == 6:\n",
+    "                    break\n",
+    "            dfs(idx + 1)\n",
     "\n",
-    "for i in range(n):\n",
-    "    graph.append(list(map(int, input().split())))\n",
-    "    for j in range(m):\n",
-    "        if graph[i][j] == 1:\n",
-    "            cctv[1].append((i, j))\n",
-    "        if graph[i][j] == 2:\n",
-    "            cctv[2].append((i, j))\n",
-    "        if graph[i][j] == 3:\n",
-    "            cctv[3].append((i, j))\n",
-    "        if graph[i][j] == 4:\n",
-    "            cctv[4].append((i, j))\n",
-    "        if graph[i][j] == 5:\n",
-    "            cctv[5].append((i, j))\n",
-    "            \n",
-    "    \n",
-    "for i in range(len(cctv[5])):\n",
-    "    x, y = cctv[5][i]\n",
-    "    \n",
-    "    for i in range(4):\n",
-    "        nx = x + dx[i]\n",
-    "        ny = y + dy[i]\n",
-    "        print(nx, ny)\n",
-    "        \n",
-    "        while nx < n and ny < m and nx >= 0 and ny >= 0 and graph[nx][ny] != 6:\n",
-    "            graph[nx][ny] = '#'\n",
-    "            nx += dx[i]\n",
-    "            ny += dy[i]\n",
-    "            \n",
+    "            # 좌\n",
+    "            arr = copy.deepcopy(temp)\n",
+    "            for i in range(col -1, -1, -1):\n",
+    "                if arr[row][i] == 0:\n",
+    "                    arr[row][i] = '#'\n",
+    "                elif arr[row][i] == 6:\n",
+    "                    break\n",
+    "            dfs(idx + 1)\n",
     "\n",
-    "def sol(temp, index, count, x, y):\n",
-    "    if index == 1:\n",
-    "        if count == 1:\n",
-    "            nx = x + dx[1]\n",
-    "            ny = y + dy[1]\n",
-    "            \n",
-    "            while nx < n and ny < m and nx >= 0 and ny >= 0 and temp[nx][ny] != 6:\n",
-    "                temp[nx][ny] = '#'\n",
-    "                nx += dx[1]\n",
-    "                ny += dy[1]\n",
-    "                \n",
-    "        if count == 2:\n",
-    "            nx = x + dx[2]\n",
-    "            ny = y + dy[2]\n",
-    "            \n",
-    "            while nx < n and ny < m and nx >= 0 and ny >= 0 and temp[nx][ny] != 6:\n",
-    "                temp[nx][ny] = '#'\n",
-    "                nx += dx[2]\n",
-    "                ny += dy[2]\n",
-    "                \n",
-    "        if count == 3:\n",
-    "            nx = x + dx[3]\n",
-    "            ny = y + dy[3]\n",
-    "            \n",
-    "            while nx < n and ny < m and nx >= 0 and ny >= 0 and temp[nx][ny] != 6:\n",
-    "                temp[nx][ny] = '#'\n",
-    "                nx += dx[3]\n",
-    "                ny += dy[3]\n",
-    "                \n",
-    "        if count == 4:\n",
-    "            nx = x + dx[4]\n",
-    "            ny = y + dy[4]\n",
-    "            \n",
-    "            while nx < n and ny < m and nx >= 0 and ny >= 0 and temp[nx][ny] != 6:\n",
-    "                temp[nx][ny] = '#'\n",
-    "                nx += dx[1]\n",
-    "                ny += dy[1]\n",
-    "        \n",
+    "            # 우\n",
+    "            arr = copy.deepcopy(temp)\n",
+    "            for i in range(col + 1, M):\n",
+    "                if arr[row][i] == 0:\n",
+    "                    arr[row][i] = '#'\n",
+    "                elif arr[row][i] == 6:\n",
+    "                    break\n",
+    "            dfs(idx + 1)\n",
+    "        elif value == 2:\n",
+    "            # 상, 하\n",
+    "            for i in range(row - 1, -1, -1):\n",
+    "                if arr[i][col] == 0:\n",
+    "                    arr[i][col] = '#'\n",
+    "                elif arr[i][col] == 6:\n",
+    "                    break\n",
+    "            for i in range(row + 1, N):\n",
+    "                if arr[i][col] == 0:\n",
+    "                    arr[i][col] = '#'\n",
+    "                elif arr[i][col] == 6:\n",
+    "                    break\n",
+    "            dfs(idx + 1)\n",
     "\n",
-    "\n"
+    "            # 좌, 우\n",
+    "            arr = copy.deepcopy(temp)\n",
+    "            for i in range(col -1, -1, -1):\n",
+    "                if arr[row][i] == 0:\n",
+    "                    arr[row][i] = '#'\n",
+    "                elif arr[row][i] == 6:\n",
+    "                    break\n",
+    "            for i in range(col + 1, M):\n",
+    "                if arr[row][i] == 0:\n",
+    "                    arr[row][i] = '#'\n",
+    "                elif arr[row][i] == 6:\n",
+    "                    break\n",
+    "            dfs(idx + 1)\n",
+    "        elif value == 3:\n",
+    "            # 상, 우\n",
+    "            for i in range(row - 1, -1, -1):\n",
+    "                if arr[i][col] == 0:\n",
+    "                    arr[i][col] = '#'\n",
+    "                elif arr[i][col] == 6:\n",
+    "                    break\n",
+    "            for i in range(col + 1, M):\n",
+    "                if arr[row][i] == 0:\n",
+    "                    arr[row][i] = '#'\n",
+    "                elif arr[row][i] == 6:\n",
+    "                    break\n",
+    "            dfs(idx + 1)\n",
+    "\n",
+    "            # 우, 하\n",
+    "            arr = copy.deepcopy(temp)\n",
+    "            for i in range(col + 1, M):\n",
+    "                if arr[row][i] == 0:\n",
+    "                    arr[row][i] = '#'\n",
+    "                elif arr[row][i] == 6:\n",
+    "                    break\n",
+    "            for i in range(row + 1, N):\n",
+    "                if arr[i][col] == 0:\n",
+    "                    arr[i][col] = '#'\n",
+    "                elif arr[i][col] == 6:\n",
+    "                    break\n",
+    "            dfs(idx + 1)\n",
+    "\n",
+    "            # 하, 좌\n",
+    "            arr = copy.deepcopy(temp)\n",
+    "            for i in range(row + 1, N):\n",
+    "                if arr[i][col] == 0:\n",
+    "                    arr[i][col] = '#'\n",
+    "                elif arr[i][col] == 6:\n",
+    "                    break\n",
+    "            for i in range(col -1, -1, -1):\n",
+    "                if arr[row][i] == 0:\n",
+    "                    arr[row][i] = '#'\n",
+    "                elif arr[row][i] == 6:\n",
+    "                    break\n",
+    "            dfs(idx + 1)\n",
+    "\n",
+    "            # 좌, 상\n",
+    "            arr = copy.deepcopy(temp)\n",
+    "            for i in range(col -1, -1, -1):\n",
+    "                if arr[row][i] == 0:\n",
+    "                    arr[row][i] = '#'\n",
+    "                elif arr[row][i] == 6:\n",
+    "                    break\n",
+    "            for i in range(row - 1, -1, -1):\n",
+    "                if arr[i][col] == 0:\n",
+    "                    arr[i][col] = '#'\n",
+    "                elif arr[i][col] == 6:\n",
+    "                    break\n",
+    "            dfs(idx + 1)\n",
+    "        elif value == 4:\n",
+    "            # 좌, 상, 우\n",
+    "            for i in range(col -1, -1, -1):\n",
+    "                if arr[row][i] == 0:\n",
+    "                    arr[row][i] = '#'\n",
+    "                elif arr[row][i] == 6:\n",
+    "                    break\n",
+    "            for i in range(row - 1, -1, -1):\n",
+    "                if arr[i][col] == 0:\n",
+    "                    arr[i][col] = '#'\n",
+    "                elif arr[i][col] == 6:\n",
+    "                    break\n",
+    "            for i in range(col + 1, M):\n",
+    "                if arr[row][i] == 0:\n",
+    "                    arr[row][i] = '#'\n",
+    "                elif arr[row][i] == 6:\n",
+    "                    break\n",
+    "            dfs(idx + 1)\n",
+    "\n",
+    "            # 상, 우, 하\n",
+    "            arr = copy.deepcopy(temp)\n",
+    "            for i in range(row - 1, -1, -1):\n",
+    "                if arr[i][col] == 0:\n",
+    "                    arr[i][col] = '#'\n",
+    "                elif arr[i][col] == 6:\n",
+    "                    break\n",
+    "            for i in range(col + 1, M):\n",
+    "                if arr[row][i] == 0:\n",
+    "                    arr[row][i] = '#'\n",
+    "                elif arr[row][i] == 6:\n",
+    "                    break\n",
+    "            for i in range(row + 1, N):\n",
+    "                if arr[i][col] == 0:\n",
+    "                    arr[i][col] = '#'\n",
+    "                elif arr[i][col] == 6:\n",
+    "                    break\n",
+    "            dfs(idx + 1)\n",
+    "\n",
+    "            # 우, 하, 좌\n",
+    "            arr = copy.deepcopy(temp)\n",
+    "            for i in range(col + 1, M):\n",
+    "                if arr[row][i] == 0:\n",
+    "                    arr[row][i] = '#'\n",
+    "                elif arr[row][i] == 6:\n",
+    "                    break\n",
+    "            for i in range(row + 1, N):\n",
+    "                if arr[i][col] == 0:\n",
+    "                    arr[i][col] = '#'\n",
+    "                elif arr[i][col] == 6:\n",
+    "                    break\n",
+    "            for i in range(col -1, -1, -1):\n",
+    "                if arr[row][i] == 0:\n",
+    "                    arr[row][i] = '#'\n",
+    "                elif arr[row][i] == 6:\n",
+    "                    break\n",
+    "            dfs(idx + 1)\n",
+    "\n",
+    "            # 하, 좌, 상\n",
+    "            arr = copy.deepcopy(temp)\n",
+    "            for i in range(row + 1, N):\n",
+    "                if arr[i][col] == 0:\n",
+    "                    arr[i][col] = '#'\n",
+    "                elif arr[i][col] == 6:\n",
+    "                    break\n",
+    "            for i in range(col -1, -1, -1):\n",
+    "                if arr[row][i] == 0:\n",
+    "                    arr[row][i] = '#'\n",
+    "                elif arr[row][i] == 6:\n",
+    "                    break\n",
+    "            for i in range(row - 1, -1, -1):\n",
+    "                if arr[i][col] == 0:\n",
+    "                    arr[i][col] = '#'\n",
+    "                elif arr[i][col] == 6:\n",
+    "                    break\n",
+    "            dfs(idx + 1)\n",
+    "        else:\n",
+    "            # 상\n",
+    "            for i in range(row - 1, -1, -1):\n",
+    "                if arr[i][col] == 0:\n",
+    "                    arr[i][col] = '#'\n",
+    "                elif arr[i][col] == 6:\n",
+    "                    break\n",
+    "            # 하\n",
+    "            for i in range(row + 1, N):\n",
+    "                if arr[i][col] == 0:\n",
+    "                    arr[i][col] = '#'\n",
+    "                elif arr[i][col] == 6:\n",
+    "                    break\n",
+    "            # 좌\n",
+    "            for i in range(col -1, -1, -1):\n",
+    "                if arr[row][i] == 0:\n",
+    "                    arr[row][i] = '#'\n",
+    "                elif arr[row][i] == 6:\n",
+    "                    break\n",
+    "            # 우\n",
+    "            for i in range(col + 1, M):\n",
+    "                if arr[row][i] == 0:\n",
+    "                    arr[row][i] = '#'\n",
+    "                elif arr[row][i] == 6:\n",
+    "                    break\n",
+    "            dfs(idx + 1)\n",
+    "\n",
+    "\n",
+    "\n",
+    "N, M = map(int, sys.stdin.readline().split())  # 세로, 가로\n",
+    "arr = [list(map(int, sys.stdin.readline().split())) for _ in range(N)]\n",
+    "\n",
+    "    # CCTY 위치 가져오기\n",
+    "position = []\n",
+    "for i in range(N):\n",
+    "     for j in range(M):\n",
+    "        if arr[i][j] != 0 and arr[i][j] != 6:\n",
+    "              position.append(([arr[i][j], i, j]))\n",
+    "\n",
+    "min_area = INF\n",
+    "dfs(0)\n",
+    "print(min_area)"
    ]
   },
   {
