--- a/프로그래머스_전화번호 목록.ipynb
+++ b/프로그래머스_전화번호 목록.ipynb
@@ -44,18 +44,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def solution(phone_book):\n",
-    "    answer = True\n",
     "    phone_book.sort()\n",
-    "    for i in range(len(phone_book) - 1):\n",
-    "        if phone_book[i] in phone_book[i + 1]:\n",
+    "    for i in range(len(phone_book)-1):\n",
+    "        temp = phone_book[i]\n",
+    "        if temp == phone_book[i + 1][:len(temp)]:\n",
     "            return False\n",
     "    return True"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
