--- a/프로그래머스_소수 찾기.ipynb
+++ b/프로그래머스_소수 찾기.ipynb
@@ -2,150 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(1, 2), (1, 3), (1, 4), (1, 5), (2, 3), (2, 4), (2, 5), (3, 4), (3, 5), (4, 5)]\n",
-      "[('1', '2'), ('1', '3'), ('1', '4'), ('1', '5'), ('2', '3'), ('2', '4'), ('2', '5'), ('3', '4'), ('3', '5'), ('4', '5')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from itertools import combinations\n",
+    "# 시간 초과\n",
     "\n",
-    "a = [1, 2, 3, 4, 5]\n",
-    "\n",
-    "b = combinations(a, 2)\n",
-    "print(list(b))\n",
-    "\n",
-    "a = \"12345\"\n",
-    "\n",
-    "b = combinations(a, 2)\n",
-    "print(list(b))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from itertools import permutations\n",
-    "\n",
-    "def solution(numbers):\n",
-    "    answer = 0\n",
-    "    all_numbers = set()\n",
-    "    length = len(numbers)\n",
-    "    for i in range(1, length + 1):\n",
-    "        for j in permutations(numbers, i):\n",
-    "            all_numbers.add(int(''.join(j)))\n",
-    "            \n",
-    "    for i in all_numbers:\n",
-    "        if sol(i):\n",
+    "def solution(n):\n",
+    "    answer = 1\n",
+    "    for x in range(3, n + 1):\n",
+    "        for j in range(2, x):\n",
+    "            if x % j == 0: \n",
+    "                break \n",
+    "        else:\n",
     "            answer += 1\n",
-    "    \n",
-    "    return answer\n",
-    "\n",
-    "def sol(num):\n",
-    "    global answer\n",
-    "    if num <= 1:\n",
-    "        return False\n",
-    "    for i in range(2, num // 2 + 1):\n",
-    "        if num % i == 0:\n",
-    "            return False    \n",
-    "    return True\n"
+    "    return answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for i in range(2, 3):\n",
-    "    print(\"2s\")"
+    "def prime_list(n):\n",
+    "    sieve = [True] * n\n",
+    "    m = int(n ** 0.5)\n",
+    "    for i in range(2, m + 1):\n",
+    "        if sieve[i] == True:          \n",
+    "            for j in range(i + i, n, i):\n",
+    "                sieve[j] = False\n",
+    "                \n",
+    "    return [i for i in range(2, n) if sieve[i] == True]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "sequence item 0: expected str instance, int found",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-29434a45f75d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m''\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: sequence item 0: expected str instance, int found"
-     ]
-    }
-   ],
-   "source": [
-    "a = ''.join([1,2,3,4,5])\n",
-    "print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12345\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = ''.join(['1','2','3','4','5'])\n",
-    "print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = int(\"011\")\n",
-    "print(a)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
