--- a/프로그래머스_소수 찾기.ipynb
+++ b/프로그래머스_소수 찾기.ipynb
@@ -6,34 +6,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 시간 초과\n",
-    "\n",
     "def solution(n):\n",
-    "    answer = 1\n",
-    "    for x in range(3, n + 1):\n",
-    "        for j in range(2, x):\n",
-    "            if x % j == 0: \n",
-    "                break \n",
-    "        else:\n",
+    "    answer = 0\n",
+    "    array = [True] * (n + 1)\n",
+    "    for i in range(2, n + 1):\n",
+    "        if array[i] == True:\n",
+    "            for j in range(i + i, n + 1, i):\n",
+    "                array[j] = False\n",
+    "    \n",
+    "    for i in range(2, n + 1):\n",
+    "        if array[i] == True:\n",
     "            answer += 1\n",
     "    return answer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def prime_list(n):\n",
-    "    sieve = [True] * n\n",
-    "    m = int(n ** 0.5)\n",
-    "    for i in range(2, m + 1):\n",
-    "        if sieve[i] == True:          \n",
-    "            for j in range(i + i, n, i):\n",
-    "                sieve[j] = False\n",
-    "                \n",
-    "    return [i for i in range(2, n) if sieve[i] == True]"
    ]
   },
   {
