--- a/백준_최소, 최대.ipynb
+++ b/백준_최소, 최대.ipynb
@@ -2,32 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{1, 2, 3}\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = set()\n",
-    "a.add(1)\n",
-    "a.add(1)\n",
-    "a.add(1)\n",
-    "a.add(2)\n",
-    "a.add(3)\n",
-    "a.add(10)\n",
-    "a.remove(10)\n",
-    "print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -41,11 +16,12 @@
     }
    ],
    "source": [
+    "#import sys\n",
+    "#input = sys.stdin.readline\n",
     "n = int(input())\n",
     "array = list(map(int, input().split()))\n",
     "print(min(array), end = ' ')\n",
-    "print(max(array))\n",
-    "    "
+    "print(max(array))"
    ]
   }
  ],
