--- a/백준_주사위 게임.ipynb
+++ b/백준_주사위 게임.ipynb
@@ -9,32 +9,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "5 6\n",
-      "6 6\n",
-      "4 3\n",
-      "5 2\n",
-      "94\n",
-      "91\n"
+      "3\n",
+      "3 3 6\n",
+      "2 2 2\n",
+      "6 2 5\n",
+      "12000\n"
      ]
     }
    ],
    "source": [
-    "a = 100\n",
-    "b = 100\n",
     "n = int(input())\n",
     "\n",
+    "array = []\n",
+    "\n",
     "for _ in range(n):\n",
-    "    x, y = map(int, input().split())\n",
-    "    if x < y:\n",
-    "        a -= y\n",
-    "    elif x > y:\n",
-    "        b -= x\n",
-    "    else:\n",
-    "        continue\n",
+    "    a, b, c = map(int, input().split())\n",
     "    \n",
-    "print(a)\n",
-    "print(b)"
+    "    if a == b == c:\n",
+    "        temp = a * 1000\n",
+    "        array.append(10000 + temp)\n",
+    "        \n",
+    "    elif a != b and a != c and b != c:\n",
+    "        temp = max(a, b, c)\n",
+    "        array.append(temp * 100)\n",
+    "        \n",
+    "    else:\n",
+    "        if a == b:\n",
+    "            array.append(1000 + 100 * a)\n",
+    "        elif a == c:\n",
+    "            array.append(1000 + 100 * a)\n",
+    "        else:\n",
+    "            array.append(1000 + 100 * b)\n",
+    "            \n",
+    "print(max(array))"
    ]
   }
  ],
