--- a/백준_비밀편지.ipynb
+++ b/백준_비밀편지.ipynb
@@ -2,45 +2,94 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "001111000000011100\n",
-      "BAD\n"
+      "5\n",
+      "011111000000111111000000111111\n",
+      "3\n"
      ]
     }
    ],
    "source": [
+    "arr = ['000000',\n",
+    "       '001111',\n",
+    "       '010011',\n",
+    "       '011100',\n",
+    "       '100110',\n",
+    "       '101001',\n",
+    "       '110101',\n",
+    "       '111010'   \n",
+    "]\n",
+    "\n",
     "n = int(input())\n",
     "s = input()\n",
-    "s_li = []\n",
-    "for i in range(0, n * 6, 6):\n",
-    "    s_li.append(s[i: i + 6])\n",
-    "promise = ['000000', '001111', '010011', '011100', '100110', '101001', '110101', '111010']\n",
     "\n",
-    "correct = ''\n",
-    "incorrect = 0\n",
-    "for i in s_li:\n",
-    "    incorrect = 0\n",
-    "    for j in promise:\n",
-    "        cnt = 0  # 맞은 개수\n",
-    "        for k in range(6):\n",
-    "            if i[k] == j[k]:\n",
-    "                cnt += 1\n",
-    "        if cnt >= 5:  # 똑같거나 한 자만 다른 경우\n",
-    "            correct += chr(promise.index(j) + 65)\n",
+    "ans = []\n",
+    "answer = -1\n",
+    "\n",
+    "for i in range(0, 6 * n, 6):\n",
+    "    temp = s[i : i + 6]\n",
+    "    \n",
+    "    now = -1\n",
+    "    now_c = -1\n",
+    "    \n",
+    "    for j in range(8):\n",
+    "        if temp == arr[j]:\n",
+    "            now = j\n",
     "            break\n",
-    "        else:  # 두 자 이상 다른 경우\n",
-    "            incorrect += 1\n",
-    "    if incorrect == len(promise):\n",
-    "        print(s_li.index(i) + 1)\n",
-    "        quit()\n",
-    "print(correct)"
+    "            \n",
+    "        else:\n",
+    "            count = 0\n",
+    "            for k in range(6):\n",
+    "                if temp[k] != arr[j][k]:\n",
+    "                    count += 1\n",
+    "            if count == 1:\n",
+    "                if now_c == -1:\n",
+    "                    now_c = j\n",
+    "                    \n",
+    "                else:\n",
+    "                    answer = i // 6 + 1\n",
+    "                    \n",
+    "    if answer != -1:\n",
+    "        break\n",
+    "                \n",
+    "    if now != -1:\n",
+    "        ans.append(now)\n",
+    "        \n",
+    "    else:\n",
+    "        if now_c != -1:\n",
+    "            ans.append(now_c)\n",
+    "        else:\n",
+    "            answer = i // 6 + 1\n",
+    "            break\n",
+    "            \n",
+    "if answer != -1:\n",
+    "    print(answer)\n",
+    "    \n",
+    "else:\n",
+    "    for i in ans:\n",
+    "        if i == 0:\n",
+    "            print('A', end = '')\n",
+    "        elif i == 1:\n",
+    "            print('B', end = '')\n",
+    "        elif i == 2:\n",
+    "            print('C', end = '')\n",
+    "        elif i == 3:\n",
+    "            print('D', end = '')\n",
+    "        elif i == 4:\n",
+    "            print('E', end = '')\n",
+    "        elif i == 5:\n",
+    "            print('F', end = '')\n",
+    "        elif i == 6:\n",
+    "            print('G', end = '')\n",
+    "        elif i == 7:\n",
+    "            print('H', end = '')\n",
+    "        \n"
    ]
   }
  ],
