--- a/백준_곱셈.ipynb
+++ b/백준_곱셈.ipynb
@@ -2,83 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 11 12\n",
-      "4\n"
+      "472\n",
+      "385\n",
+      "2360\n",
+      "3776\n",
+      "1416\n",
+      "181720\n"
      ]
     }
    ],
    "source": [
-    "a, b, c = map(int, input().split())\n",
+    "n = input()\n",
+    "m = input()\n",
     "\n",
-    "def sol(a, b):\n",
-    "    if b == 1:\n",
-    "        return a % c\n",
-    "    \n",
-    "    temp = sol(a, b // 2)\n",
-    "    \n",
-    "    if b % 2 == 0:\n",
-    "        return temp * temp % c\n",
-    "    \n",
-    "    else:\n",
-    "        return temp * temp * a % c\n",
-    "    \n",
-    "print(sol(a, b))\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = 1\n",
-    "def sol():\n",
-    "    print(a)\n",
-    "    \n",
-    "sol()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'a' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-236d8743a8a8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0ma\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0msol\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-2-236d8743a8a8>\u001b[0m in \u001b[0;36msol\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0msol\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0ma\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'a' referenced before assignment"
-     ]
-    }
-   ],
-   "source": [
-    "a = 1\n",
-    "def sol():\n",
-    "    print(a)\n",
-    "    a += 1\n",
-    "    \n",
-    "sol()"
+    "print(int(n) * int(m[-1]))\n",
+    "print(int(n) * int(m[-2]))\n",
+    "print(int(n) * int(m[-3]))\n",
+    "print(int(n) * int(m))"
    ]
   }
  ],
