--- a/백준_행렬.ipynb
+++ b/백준_행렬.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,8 +11,8 @@
      "text": [
       "1 1\n",
       "1\n",
-      "0\n",
-      "-1\n"
+      "1\n",
+      "0\n"
      ]
     }
    ],
@@ -30,28 +30,37 @@
     "answer = 0\n",
     "\n",
     "check = False\n",
-    "                  \n",
-    "for i in range(n - 2):\n",
-    "    for j in range(m - 2):\n",
-    "        if array1[i][j] != array2[i][j]:\n",
-    "            for x in range(i, i + 3):\n",
-    "                for y in range(j, j + 3):\n",
-    "                    array1[x][y] = 1 - array1[x][y]\n",
-    "            answer += 1\n",
-    "                \n",
+    "if array1 == array2:\n",
+    "    print(0)\n",
+    "else: \n",
+    "    for i in range(n - 2):\n",
+    "        for j in range(m - 2):\n",
+    "            if array1[i][j] != array2[i][j]:\n",
+    "                for x in range(i, i + 3):\n",
+    "                    for y in range(j, j + 3):\n",
+    "                        array1[x][y] = 1 - array1[x][y]\n",
+    "                answer += 1\n",
+    "\n",
+    "            if array1 == array2:\n",
+    "                check = True\n",
+    "                break\n",
+    "\n",
     "        if array1 == array2:\n",
     "            check = True\n",
     "            break\n",
-    "            \n",
-    "    if array1 == array2:\n",
-    "        check = True\n",
-    "        break\n",
-    "                        \n",
-    "if check:\n",
-    "    print(answer)\n",
-    "else:\n",
-    "    print(-1)"
+    "\n",
+    "    if check:\n",
+    "        print(answer)\n",
+    "    else:\n",
+    "        print(-1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
